# ChangeLog for media-libs/libbluray
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libbluray/ChangeLog,v 1.25 2012/02/28 22:19:45 ranger Exp $

  28 Feb 2012; Brent Baude <ranger@gentoo.org> libbluray-0.2.1-r1.ebuild:
  Marking libbluray-0.2.1-r1 ppc for bug 405659

  25 Feb 2012; Agostino Sarubbo <ago@gentoo.org> libbluray-0.2.1-r1.ebuild:
  Stable for amd64, wrt bug #405661

  28 Jan 2012; Samuli Suominen <ssuominen@gentoo.org>
  libbluray-0.2.1-r1.ebuild:
  Keyword ~ppc/~ppc64 wrt #397531

  28 Jan 2012; Samuli Suominen <ssuominen@gentoo.org>
  libbluray-0.0.1_pre20110819.ebuild, libbluray-0.2.1-r1.ebuild,
  libbluray-9999.ebuild:
  Replace media-video/aacskeys depend with media-libs/libaacs which is dlopened
  wrt #398233 by Petri Hintukainen. It could be that media-libs/libaacs should
  have depend for media-video/aacskeys, but it doesn't belong to this ebuild.

  28 Jan 2012; Samuli Suominen <ssuominen@gentoo.org>
  -libbluray-0.0.1_pre20110210-r1.ebuild, -libbluray-0.2.1.ebuild:
  old

  03 Jan 2012; Samuli Suominen <ssuominen@gentoo.org>
  libbluray-0.2.1-r1.ebuild, libbluray-9999.ebuild:
  Remove USE="xine" and PDEPEND for libbluray-xine because the plug-in is now
  part of xine-lib since 1.2.0.

  15 Dec 2011; Agostino Sarubbo <ago@gentoo.org>
  libbluray-0.0.1_pre20110819.ebuild:
  Stable for AMD64, wrt bug #390593

*libbluray-0.2.1-r1 (12 Dec 2011)

  12 Dec 2011; Tim Harder <radhermit@gentoo.org> +libbluray-0.2.1-r1.ebuild:
  Revision bump to pull in libaacs when aacs supported is enabled.

  12 Dec 2011; Tim Harder <radhermit@gentoo.org>
  libbluray-0.0.1_pre20110210-r1.ebuild, libbluray-0.0.1_pre20110819.ebuild,
  libbluray-0.2.1.ebuild:
  Use correct LICENSE.

  09 Dec 2011; Alexis Ballier <aballier@gentoo.org> libbluray-0.2.1.ebuild:
  keyword ~x86-fbsd

  04 Dec 2011; Tim Harder <radhermit@gentoo.org> libbluray-0.2.1.ebuild:
  Add missing BD-J files (fixes bug #393003).
