@@ -1,9 +1,21 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 90libbluray 54 RMD160 84db53b27b75b2517fffec8a5fe90be268fd0456 SHA1 17722372416bf85efb35ce0e2879da2e94360765 SHA256 6ecc4c3b7d343184f498e029f64ab77c6b779eda4934adef01ba6e00aa1e67bd
-DIST libbluray-0.0.1_pre20110819.tar.xz 191992 RMD160 0e3317616a316fe1f6204d270d3239d644d963a1 SHA1 72f56f9859e3354109920c5697c2833d4466dae4 SHA256 64c87de6411939712ff2546b6cca6e16a0599e4d8da449d49e499d23c273a2d4
 DIST libbluray-0.2.1-bdj.patch.gz 88688 RMD160 fceb3b50bb81e4c7c773a0e6b4d792c97d4bd09e SHA1 46ca3a5f9d059aa720223941271c6b160a4c0620 SHA256 b18bc0b85d91a1a9d427927bd7ef042eb1ecfe06e92b8b9e4723cab16cf1c634
 DIST libbluray-0.2.1.tar.bz2 396405 RMD160 afc07c3ca92d77d82e9db9dd12b94446fe84b6bd SHA1 a14a940966a1be8e27106de641fafcd56f26215b SHA256 20eb1d352e9d26e8b5b639f82c218a0c350b78cdbcb741f89d237e2202bd113a
-EBUILD libbluray-0.0.1_pre20110819.ebuild 1778 RMD160 e3b99c0f41a817b9c8d5f5ff2a29654e19f3a3a7 SHA1 ff09eb2376e2595a649d325629e9eb4f48bb4d65 SHA256 c30a8e71da94533bf65fb5dd1d708777eddbb85924158b98041932fe2ee93480
-EBUILD libbluray-0.2.1-r1.ebuild 1903 RMD160 0756128ccfdf5789d65cab9f928d0b974b67e96a SHA1 8cc610fec5dab3942304539f4e068b247eb8ca08 SHA256 d177ef6680206aa4dc3f993fca7a6751c642be77d6b4f3963bcb72683d65f6f3
+EBUILD libbluray-0.2.1-r1.ebuild 1904 RMD160 14ce1d7fb1050b3f3e004fa1134914017df05b58 SHA1 b08f8608cbc7eed771398e070ed9d6488f94eedb SHA256 e9ce9fac9ff00b5972772d33838306e88ce642e7cf368664c1103fc5cda2a6fe
 EBUILD libbluray-9999.ebuild 1714 RMD160 03a55bcc7e1d7cef9de6cd56efc7c58c9696bc57 SHA1 3f5e6adc8cd2807a629420d3a6dc9197c29642a9 SHA256 3418b5b25ecdf86259feade289733f39b2f40f887aa5d78374379ca263b9e669
-MISC ChangeLog 4494 RMD160 b09ac793bdb520d580f10c996e3142e25e563868 SHA1 2852eeb741d9b955b297d50722b52e5c208c71a9 SHA256 40fefef54b38e212c7acae97aa2106417fce9825e4a96af8e1e955fc9cb73153
+MISC ChangeLog 4712 RMD160 4140ab9d475b76a8a332138d224a33efe3126052 SHA1 3fd51362b7af1c5b53c9b6357f16f6c91f6a3969 SHA256 a4678b73040dcb33d5ed0be3e9249bbeca58b1f4d3227be4706244b00a445cce
 MISC metadata.xml 527 RMD160 a44ea7636da6beaf53d2a66f25d094936f4fcd58 SHA1 53a8c209f1994ff91403b4069e3c7fa454e69274 SHA256 23c85cb76c6f4e027d6a6d32d33d5f26d02bfefa80f1a1c1b5fdc3739f25dcd4
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (GNU/Linux)
+
+iQEcBAEBAgAGBQJPTgobAAoJEEdUh39IaPFNhvwIAJIQL+s30Ui3xTa5AsIzvHaB
+Q0DFkLxaSeDcaUEQVX3WSXcliRH1TbOmLT7s9PC8ovsXbCeeHxtxew2gsUQ4jzbW
+uZj12iff0Fux4qLYV8TE6dxJTsXVIUuV5TFZ5PVJw3pG3Do4ijU0sXxscJSPI2Rf
+PWjwnmifbKJNLNgmEgphfgsS36bLi0r9AQWjaT/GqERRHYRKjqVh872DXAFiEa5m
+Vgo0GG3G5rSuSaEKjwgrv6GmT1nguN1PWq1HgMGP9O0eYdx9wcFYH5GJ6OVeIFw8
+Vhry0yxvjtUgXHAMTFcZUyMpA+YrQ3DjpoaVkRSpRyICMZys8AQ4uikwuyE0Yq8=
+=aNmD
+-----END PGP SIGNATURE-----
