@@ -15,14 +15,18 @@ EBUILD xine-lib-1.1.19.ebuild 5675 RMD160 b34cf5a8030843ba98e7a90200e4c5e1518153
 EBUILD xine-lib-1.1.20.ebuild 5416 RMD160 02b70183bbda2d03ec3fe742a19d0cae72049c90 SHA1 8a155af17311149aa0f4496dee7c4432848d22df SHA256 4b611a4b8ac09dac6273ba5f3ee64ffd46792afce55ad0192993a00ac3a589d0
 EBUILD xine-lib-1.2.0-r1.ebuild 5163 RMD160 f3ffd8fbd6285a10b217f32c5a718993ccef686a SHA1 9eb4e3cc4c8b82f730dc1a915f1dac50493b5e5f SHA256 401242cc5ea582fcb36f4e93b30997ba5429cfb313287156fe2555142ef2f55b
 EBUILD xine-lib-1.2.0-r2.ebuild 5227 RMD160 97797d790352e13d542c3e7379896e75a00f7fde SHA1 5e03fbe022ccf7ab988012e0d44bb75a2e654647 SHA256 86c8dc936076cced174bed75a61254a35455210b231e88eec01889cc6e627261
-EBUILD xine-lib-1.2.1.ebuild 5207 RMD160 57ff111316cc19236878735ba8fd1a106db402c9 SHA1 40436182b96d598e499e8371e36a05028eb04d46 SHA256 3713da56faaea2f4da2e27445cc60dacc57961839750286a0ce3e2cd50ea2885
+EBUILD xine-lib-1.2.1.ebuild 5206 RMD160 a92afe8d027f4c1fec4a462844a10fa7689232bf SHA1 debd3e74df0a18471324eaab80022ef769298cd0 SHA256 7e8b77ab2815a8030929b997cfcdf2b7890da966f154c0622c0d1be66416fa8b
 EBUILD xine-lib-1.2.9999.ebuild 5163 RMD160 fd641aafdc8fee17b49d54d77f98eee4fbb1df08 SHA1 ce66a4a34f4c784bc88524ce337231f2a5f4ebeb SHA256 abfb6935a743bbeb79cf54819ce4c101776cf6fea0dc20983e162b6d8acecb5c
-MISC ChangeLog 78158 RMD160 12ff1839f422c3c65cee658646219aacad541021 SHA1 3c35dfa47175ca78478c2b25b3d7587e5d682a39 SHA256 861e1fd12f15f135d202a5a5fdcc96dad72263194f7865c6a23624cf78f536d0
+MISC ChangeLog 78268 RMD160 2e83b7f18267e975478f72dbb75c3a12821ca49f SHA1 1771a5265850bbd98a666e2ac7b4e722f555df3f SHA256 1afcf5aba61e6f8e02d37374fffd23ad31980b086b8a46c3e6c258101d049641
 MISC metadata.xml 3072 RMD160 1e12a6a6a26545534c9a77ee57a04c3df6613772 SHA1 c0f3e790048f732dedb7de2478a1de54f327a2b7 SHA256 40718f6753a8cdbb8492ca71d3c335106fa7fe54cb4f6161ad1023ef8323af1e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk9Ne50ACgkQvFcC4BYPU0otUgCfXa8w7dyM9aj3jlQvXz0zWMpZ
-e5MAnRChtBUJnTKEyYA9UTKCQ5Du0CNt
-=f9b2
+iQEcBAEBAgAGBQJPTgsMAAoJEEdUh39IaPFNpBUH/jUxUXMoJCiYAvRaSnC+DsCu
+nz3SYnqFnf0k5lgRLGu2+MHHYex4949Icz0qokX7wfVodAqV1dZ7OBJcvATe+b+C
+VYH8jX7n5KCK7dxaMJO9gRwJLiYkN5dAdOucNaJX4Jhsm3jiTTftmR5JXaa41LDZ
+bfb4LjllmE/NkneeQU92Z60DUabmzsX+12Ei40Ysy9lnLsuCZZUCenfdvdQSgMQo
+SK94ODFjqnMS/+PuxGCDypZ0EKxoj2C21I6cTSuVd8JAwXMwBdApRVwuHAu891lt
+TmMaeWK07AiFD//VkEk/TuyE4x6Ify80KUUk5i7orOhDETCiPuQhNxyWEBIWjTI=
+=dUFc
 -----END PGP SIGNATURE-----
