@@ -1,9 +1,17 @@
 # ChangeLog for media-libs/libbluray
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libbluray/ChangeLog,v 1.25 2012/02/28 22:19:45 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libbluray/ChangeLog,v 1.26 2012/02/29 11:21:35 ssuominen Exp $
+
+  29 Feb 2012; Samuli Suominen <ssuominen@gentoo.org>
+  -libbluray-0.0.1_pre20110819.ebuild:
+  old
+
+  29 Feb 2012; Samuli Suominen <ssuominen@gentoo.org>
+  libbluray-0.2.1-r1.ebuild:
+  ppc64/x86 stable wrt #405661
 
   28 Feb 2012; Brent Baude <ranger@gentoo.org> libbluray-0.2.1-r1.ebuild:
-  Marking libbluray-0.2.1-r1 ppc for bug 405659
+  Marking libbluray-0.2.1-r1 ppc for bug 405661
 
   25 Feb 2012; Agostino Sarubbo <ago@gentoo.org> libbluray-0.2.1-r1.ebuild:
   Stable for amd64, wrt bug #405661
